@@ -1,5 +1,11 @@
 2015-03-24  Pedro Alves  <palves@redhat.com>
 
+	* infrun.c (user_visible_resume_ptid): Rewrite going from
+	most-locked to unlocked instead of the opposite.  Move comment ...
+	* infrun.h (user_visible_resume_ptid): ... here.
+
+2015-03-24  Pedro Alves  <palves@redhat.com>
+
 	* linux-nat.c (linux_nat_resume): Output debug logs before trying
 	to resume the event lwp.  Use the lwp's ptid instead of the passed
 	in (maybe wildcard) ptid.
